force-app/main/default/objects/Api_Master__c/Api_Master__c.object-meta.xml
<CustomObject>
    <label>Api Master</label>
    <nameField>
        <displayFormat>API-{0000}</displayFormat>
        <label>Api Master Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Api Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>