force-app/main/default/objects/Api_Master__c/fields/Api_Category__c.field-meta.xml
<CustomField>
    <fullName>Api_Category__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Api Category</label>
    <referenceTo>Api_Category__c</referenceTo>
    <relationshipLabel>Api Master</relationshipLabel>
    <relationshipName>Api_Master</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>