force-app/main/default/objects/Api_Master__c/fields/Api_Documentation__c.field-meta.xml
<CustomField>
    <fullName>Api_Documentation__c</fullName>
    <label>Api Documentation</label>
    <type>Url</type>
</CustomField>