force-app/main/default/objects/Api_Master__c/fields/Api_End_Point__c.field-meta.xml
<CustomField>
    <fullName>Api_End_Point__c</fullName>
    <label>Api End Point</label>
    <required>true</required>
    <type>Url</type>
</CustomField>