force-app/main/default/objects/Api_Master__c/fields/Api_Logo_Image__c.field-meta.xml
<CustomField>
    <fullName>Api_Logo_Image__c</fullName>
    <label>Api Logo Image</label>
    <type>Url</type>
</CustomField>