force-app/main/default/objects/Api_Master__c/fields/Api_UName__c.field-meta.xml
<CustomField>
    <fullName>Api_UName__c</fullName>
    <label>Api UName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>