force-app/main/default/objects/Api_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Api_Name__c</columns>
    <columns>Api_End_Point__c</columns>
    <columns>Api_UName__c</columns>
    <columns>Api_Key__c</columns>
    <columns>Api_Documentation__c</columns>
    <columns>Api_Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>